--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,69 @@
-body{
+main{
+    background-color: lightblue;
+    font-family: Arial, Helvetica, sans-serif;
+}
+header{
     background-color: lightblue;
     font-family: Arial, Helvetica, sans-serif;
 }
 h1{
     text-align: center;
 }
+
+ /* nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* align-content: center; */
+    /* margin-right: auto;
+    margin-left: auto;
+    background-color: rgb(135, 231, 135); 
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+   
+ }
+ ul {
+    text-decoration: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+ 
+  nav li {
+    display: inline-block;
+    font-size: 20px;
+    padding: 20px;
+    text-decoration: none;
+  }  */ 
+
+
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(110, 197, 110);
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  fieldset{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
 
