--- a/css/styles.css
+++ b/css/styles.css
@@ -10,36 +10,6 @@ h1{
     text-align: center;
 }
 
- /* nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* align-content: center; */
-    /* margin-right: auto;
-    margin-left: auto;
-    background-color: rgb(135, 231, 135); 
-    list-style-type: none;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-   
- }
- ul {
-    text-decoration: none;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
- 
-  nav li {
-    display: inline-block;
-    font-size: 20px;
-    padding: 20px;
-    text-decoration: none;
-  }  */ 
-
-
-
   ul {
     list-style-type: none;
     margin: 0;
@@ -64,6 +34,59 @@ h1{
     justify-content: center;
     align-items: center;
   }
+/* ----------------footer----------------------- */
+
+  .footer{
+    background: rgb(159, 236, 159);
+    color: #8A8A8A;
+    font-size: 14px;
+    padding: 60px 0 20px;
+    text-align: center;
+}
+.footer p{
+    color: #080707;
+}
+.footer h3{
+    color: rgb(24, 2, 2);
+    margin: 20px;
+}
+.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4{
+min-width: 250px;
+margin-bottom: 20px;
+}
+.footer-col-1{
+    flex-basis: 30%;
+}
+.footer-col-2{
+    flex: 1;
+    text-align: center;
+}
+.footer-col-2 img{
+    width: 180px;
+    margin-bottom: 20px;
+}
+ .footer-col-3{
+    flex-basis: 12%;
+    text-align: center;
+}
+ul{
+    list-style-type: none;
+    color: #010101;
+}
+
+.footer hr{
+    border: none;
+    background: #110c0c;
+    height: 1px;
+    margin: 20px 0;
+}
+.Copyright{
+    text-align: center;
+}
+.menu-icon{
+    width: 60px;
+    margin-left: 20px;
+}
   
   
 
