add styles, and refactor some codes

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 main{
-    background-color: lightblue;
+    background-color: rgb(177, 213, 244);
     font-family: Arial, Helvetica, sans-serif;
 }
 header{
